# c---assignment1

./: .gitignore  CMakeLists.txt
Data/: clients.txt  menu.txt  orders.txt
header/: admin.hpp  admin_manage.hpp  client.hpp  clients_manage.hpp  file.hpp  keyboard.hpp  menu.hpp  menu_item.hpp  order.hpp  order_manage.hpp  ui.hpp
src/: main.cpp
src/othercpp/: admin.cpp  admin_manage.cpp  client.cpp  client_manage.cpp  file.cpp  keyboard.cpp  menu.cpp  menu_item.cpp  order_manage.cpp  orders.cpp  ui.cpp
